# datasetq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  TODO.md  audit.toml  build.rs  build_output.txt  devenv.nix  errors.txt  options.sh
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/scripts/: free_disk_space.sh
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  release.yml
benches/: comparison_bench.rs  json_parsing.rs  json_reading_bench.rs  micro_bench.rs  pipeline_operations.rs  value_operations.rs
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  FEATURES.md  FORMATS.md  FUNCTIONS.md  LANGUAGE.md  WASM.md
docs/functions/: ARRAY.md  DATAFRAME.md  DATETIME.md  FINANCIAL.md  MATH.md  STATISTICS.md  STRING.md  URL.md  UTILITY.md
examples/: README.md
examples/basic_filtering/: README.md
examples/format_conversion/: README.md
examples/functions/transliterate/: data.csv  data.json  query.dsq
examples/library_usage/: README.md
integration_testing/: test_data.json  test_data.jsonl  test_data.tsv
integration_testing/spec/: integration_spec.rb
scripts/: build.sh  build_cli.sh  coverage.sh  file_metrics.rb  install.sh  release.sh  test_all.sh  zig_cc
src/: lib.rs  test_urls.json
src/dsq/: cli.rs  config.rs  executor.rs  main.rs  output.rs  repl.rs
src/dsq-cli/: Cargo.toml  README.md
src/dsq-cli/src/: cli.rs  config.rs  executor.rs  lib.rs  main.rs  output.rs  repl.rs
src/dsq-core/: CHANGELOG.md  Cargo.toml  README.md
src/dsq-core/src/: api.rs  error.rs  io.rs  lib.rs  value.rs
src/dsq-core/src/filter/: mod.rs
src/dsq-core/src/ops/: access_ops.rs  aggregate.rs  arithmetic_ops.rs  assignment_ops.rs  basic.rs  comparison_ops.rs  construct_ops.rs  join.rs  lazy_pipeline.rs  logical_ops.rs  mod.rs  pipeline.rs  selection_ops.rs  tests.rs  transform.rs  utils.rs
src/dsq-core/src/ops/aggregate/: cumulative.rs  ewma.rs  group_by.rs  pivot.rs  rolling.rs  tests.rs  unpivot.rs
src/dsq-core/tests/: pipeline_integration.rs
src/dsq-filter/: Cargo.toml  README.md
src/dsq-filter/src/: compiler.rs  context.rs  executor.rs  lib.rs
src/dsq-formats/: Cargo.toml  README.md  test.rs
src/dsq-formats/src/: adt.rs  csv.rs  error.rs  format.rs  json.rs  json5.rs  lib.rs  macros.rs  parquet.rs  writer.rs
src/dsq-formats/src/reader/: data_reader.rs  dispatch.rs  file_reader.rs  json_utils.rs  memory_reader.rs  mod.rs  options.rs
src/dsq-functions/: Cargo.toml  README.md
src/dsq-functions/builtin/: mktime.rs  systime_ns.rs
src/dsq-functions/src/: lib.rs  lib.rs.backup
src/dsq-functions/src/builtin/: abs.rs  acos.rs  add.rs  adx.rs  alpha.rs  array_pop.rs  array_push.rs  array_shift.rs  array_unshift.rs  asin.rs  atan.rs  atr.rs  avg.rs  avg_if.rs  avg_ifs.rs  base32_decode.rs  base32_encode.rs  base58_decode.rs  base58_encode.rs  base64_decode.rs  base64_encode.rs  bbands.rs  beta.rs  buffer.rs  camel_case.rs  cci.rs  ceil.rs  coalesce.rs  columns.rs  concat.rs  contains.rs  correl.rs  cos.rs  count.rs  count_if.rs  cut.rs  date_diff.rs  day.rs  del.rs  dos2unix.rs  (+151 more)
src/dsq-functions/tests/: financial_functions.rs
src/dsq-io/: Cargo.toml  README.md
src/dsq-io-filesystem/: Cargo.toml  README.md
src/dsq-io-filesystem/src/: lib.rs
src/dsq-io-https/: Cargo.toml  README.md
src/dsq-io-https/src/: lib.rs
src/dsq-io-huggingface/: Cargo.toml  README.md
src/dsq-io-huggingface/src/: lib.rs
src/dsq-io-uri/: Cargo.toml  README.md
src/dsq-io-uri/src/: lib.rs
src/dsq-io/src/: file_writer.rs  http.rs  huggingface.rs  lib.rs  memory_writer.rs  options.rs  reader.rs  traits.rs  utils.rs
src/dsq-io/src/formats/: arrow.rs  avro.rs  csv.rs  json.rs  mod.rs  parquet.rs
src/dsq-parser/: Cargo.toml  README.md  test_parse.rs
src/dsq-parser/src/: ast.rs  error.rs  lib.rs  parser.rs  tests.rs
src/dsq-parser/src/parser/: expressions.rs  identifiers.rs  literals.rs  mod.rs  operators.rs  utils.rs
src/dsq-shared/: Cargo.toml  README.md
src/dsq-shared/src/: lib.rs  value.rs
src/dsq-shared/src/ops/: arithmetic_ops.rs  basic_ops.rs  comparison_ops.rs  construct_ops.rs  logical_ops.rs  mod.rs  special_ops.rs  tests.rs  traits.rs  utils.rs
src/dsq-sql/: Cargo.toml  README.md
src/dsq-sql/src/: lib.rs
