[package]
name = "datasetq"
version = "0.2.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "A data processing tool with a jq-like syntax for structured data formats, including CSV, JSON, Parquet, Avro, and more."
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
homepage = "https://datasetq.com"
documentation = "https://docs.rs/dsq"
readme = "README.md"
keywords = ["jq", "data", "csv", "json", "parquet"]
categories = ["command-line-utilities", "data-structures", "parsing"]

[workspace]
members = ["src/dsq-shared", "src/dsq-parser", "src/dsq-filter", "src/dsq-functions", "src/dsq-formats", "src/dsq-cli", "src/dsq-core", "src/dsq-io", "src/dsq-io-uri", "src/dsq-io-filesystem", "src/dsq-io-https", "src/dsq-io-huggingface"]
resolver = "2"

[workspace.lints.clippy]
pedantic = "allow"
nursery = "allow"
cargo = {priority = -1, level = "warn"}
approx_constant = {priority = 2, level = "allow" }
multiple_crate_versions = {priority = 2, level = "allow" }

[workspace.dependencies]
# Core dependencies shared across workspace
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data processing
polars = { version = "0.52", default-features = false, features = ["lazy", "csv", "json", "ipc", "strings",  "dtype-datetime", "dtype-date", "dtype-time", "describe", "rows", "regex", "timezones"]}
arrow = "57"

# Parsing
nom = "8.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
indexmap = "2.1"
regex = "1.10"
base64 = "0.22"

# Big numbers
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Technical analysis
ta = "0.5"

# CLI
clap = { version = "4.4", features = ["derive", "cargo", "env"] }

# Async
tokio = { version = "1.35", default-features = false, features = [] }
futures = "0.3"

# Parallelism
rayon = "1.10"

# Testing
tempfile = "3.8"
criterion = "0.8"
proptest = "1.4"
pretty_assertions = "1.4"

# Additional shared dependencies (consolidation of crate-specific deps)
bitflags = "2.10"
foldhash = "0.2.0"
hashbrown = "0.16.1"
heck = "0.5"
libflate = "2.2"
libflate_lz77 = "2.2"
rand = "0.9"
rand_chacha = "0.9"
rand_core = "0.9"
strum_macros = "0.27"
apache-avro = "0.21"
env_logger = "0.11"
dirs = "6.0"
toml = "0.9"
clap_complete = "4.4"
getrandom = "0.3.4"
paste = "1.0"
itertools = "0.14"
either = "1"
bytes = "1.5"
smallvec = "1.11"
once_cell = "1.19"
lru = "0.16"
is-terminal = "0.4"
num_cpus = "1.16"
serde_yaml = "0.9"
base32 = "0.5"
base58 = "0.2"
url = "2.4"
sha2 = "0.10"
uuid = "1.0"
md5 = "0.8"
sha1 = "0.10"
unidecode = "0.3"
num-format = "0.4"
smartstring = "1.0"
inventory = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
assert_cmd = "2.0"
predicates = "3.0"
coz = "0.1"
windows-sys = "0.61.2"

[lib]
name = "dsq"
# Default: rlib for musl static binaries and general compatibility
crate-type = ["rlib", "cdylib"]







[dependencies]
# Core DSQ crates (shared across all targets)
dsq-core = { version = "0.2.0", path = "src/dsq-core", default-features = false }
dsq-shared = { version = "0.2.0", path = "src/dsq-shared" }
dsq-parser = { version = "0.2.0", path = "src/dsq-parser" }
dsq-filter = { version = "0.2.0", path = "src/dsq-filter" }
dsq-io = { version = "0.2.0", path = "src/dsq-io" }

# CLI and configuration
clap = { workspace = true, features = ["derive", "cargo", "env"], optional = true }
clap_complete = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

is-terminal = { workspace = true, optional = true }
chrono = { workspace = true }
env_logger = { workspace = true, optional = true }
log = { workspace = true }
num_cpus = { workspace = true, optional = true }
tokio = { workspace = true, default-features=false, features = [], optional = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional utilities
dirs = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
inventory = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }





[target.'cfg(not(target_family = "wasm"))'.dependencies]
polars = { workspace = true, features = ["lazy", "csv", "json", "parquet", "ipc", "strings", "temporal", "dtype-datetime", "dtype-date", "dtype-time", "describe", "rows", "chunked_ids", "pivot", "regex", "timezones"]}
getrandom = { workspace = true, optional = true }
tokio = { version = "1.35", default-features = false, features = ["fs", "rt-multi-thread", "macros"] }
# I/O and utilities
apache-avro = { workspace = true, features = ["snappy"], optional = true }
coz = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
polars = { version = "0.52", default-features = false, features = ["lazy", "csv", "json", "strings",  "dtype-datetime", "dtype-date", "dtype-time", "describe", "rows", "regex", "timezones"]}
#polars = { version = "0.51", default-features = false, features = [], optional = true }
getrandom = { workspace = true, features = ["wasm_js"] }
tokio = { version = "1.35", default-features = false, features = [], workspace = true }
wasm-bindgen = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
coz = { workspace = true }
dsq-formats = { version = "0.2.0", path = "src/dsq-formats" }



[features]
default = ["csv", "bin", "http"]
all-formats = ["csv", "json", "parquet", "arrow", "avro"]
csv = []
json = []
parquet = []
arrow = []
avro = ["apache-avro"]
cli = ["clap", "clap_complete", "is-terminal", "env_logger", "num_cpus", "tokio", "serde", "serde_json", "serde_yaml", "toml", "dirs", "tempfile", "getrandom"]
bin = ["cli"]
filter = []
wasm = ["serde_json"]
http = ["dsq-io/http"]
huggingface = ["dsq-io/huggingface"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.profiling]
inherits = "dev"
opt-level = 3
debug = true
lto = false
codegen-units = 16

[profile.coverage]
inherits = "dev"
debug = true
opt-level = 0

[profile.cli-fast]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "micro_bench"
harness = false
required-features = ["cli"]

[[bench]]
name = "comparison_bench"
harness = false
required-features = ["cli"]

[[bench]]
name = "json_reading_bench"
harness = false
required-features = ["cli"]

[package.metadata.deb]
maintainer = "Durable Programming LLC <contact@durableprogramming.com>"
copyright = "2025, Durable Programming LLC"
license-file = ["LICENSE-MIT", "4"]
extended-description = """\
DatasetQ (dsq) is a data processing tool with a jq-like syntax for structured data formats, \
including CSV, JSON, Parquet, Avro, and more.

Features:
- jq-like syntax for data processing
- Support for multiple formats: CSV, JSON, Parquet, Avro, Arrow
- Fast and efficient data processing
- Command-line interface for easy integration

DatasetQ is designed to make working with structured data simple and efficient."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/dsq", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/datasetq/", "644"],
    ["LICENSE-MIT", "usr/share/doc/datasetq/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dsq", dest = "/usr/bin/dsq", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/datasetq/README.md", mode = "644" },
    { source = "LICENSE-MIT", dest = "/usr/share/doc/datasetq/LICENSE-MIT", mode = "644" },
]

[patch.crates-io]
zstd-sys = { path = "vendor/zstd-sys-forked", default-features = false, features = ["legacy"] }


