[package]
name = "dsq-cli"
version = "0.1.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "CLI for dsq - data processing with jq syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
homepage = "https://datasetq.com"
documentation = "https://docs.rs/dsq-cli"
readme = "README.md"
keywords = ["jq", "data", "cli", "query", "dataframe"]
categories = ["command-line-utilities", "data-structures"]

[lints]
workspace = true

[dependencies]
# Core DSQ crates (shared across all targets)
dsq-core = { path = "../dsq-core", features = ["filter", "io"] }
dsq-shared = { path = "../dsq-shared" }
dsq-parser = { path = "../dsq-parser" }
dsq-filter = { path = "../dsq-filter" }
dsq-functions = { path = "../dsq-functions" }
dsq-formats = { path = "../dsq-formats" }
dsq-io = { path = "../dsq-io" }

# Data processing
polars = { workspace = true }

# Logging
log = { workspace = true }

# CLI dependencies
clap = { workspace = true }
clap_complete = { workspace = true }
atty = { workspace = true }
env_logger = { workspace = true }
num_cpus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
getrandom = { workspace = true }
anyhow = { workspace = true }

# Profiling
coz = { workspace = true, optional = true }

[features]
default = ["cli"]
cli = []
csv = []
json = []
parquet = []
avro = []
io-arrow = []
profiling = ["coz", "dsq-filter/profiling", "dsq-formats/profiling"]

[lib]
name = "dsq_cli"
path = "src/lib.rs"

[[bin]]
name = "dsq"
path = "src/main.rs"
required-features = ["cli"]
