[package]
name = "dsq-cli"
version = "0.1.3"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "CLI for dsq - data processing with jq syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
homepage = "https://datasetq.com"
documentation = "https://docs.rs/dsq-cli"
readme = "README.md"
keywords = ["jq", "data", "cli", "query", "dataframe"]
categories = ["command-line-utilities", "data-structures"]

[lints]
workspace = true

[dependencies]
# Core DSQ crates (shared across all targets)
dsq-core = { version = "0.1.0", path = "../dsq-core", features = ["filter", "io"] }
dsq-shared = { version = "0.1.0", path = "../dsq-shared" }
dsq-parser = { version = "0.1.0", path = "../dsq-parser" }
dsq-filter = { version = "0.1.0", path = "../dsq-filter" }
dsq-functions = { version = "0.1.0", path = "../dsq-functions" }
dsq-formats = { version = "0.1.0", path = "../dsq-formats" }
dsq-io = { version = "0.1.0", path = "../dsq-io" }

# Data processing
polars = { workspace = true }

# Logging
log = { workspace = true }

# CLI dependencies
clap = { workspace = true }
clap_complete = { workspace = true }
atty = { workspace = true }
env_logger = { workspace = true }
num_cpus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
getrandom = { workspace = true }
anyhow = { workspace = true }

# Profiling
coz = { workspace = true, optional = true }

[dev-dependencies]
num-bigint = { workspace = true }

[features]
default = ["cli"]
cli = []
csv = []
json = []
parquet = []
avro = []
io-arrow = []
profiling = ["coz", "dsq-filter/profiling", "dsq-formats/profiling"]
http = ["dsq-io/http"]
huggingface = ["dsq-io/huggingface"]

[lib]
name = "dsq_cli"
path = "src/lib.rs"

[[bin]]
name = "dsq"
path = "src/main.rs"
required-features = ["cli"]
