[package]
name = "dsq-core"
version = "0.1.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "Core functionality for dsq - data processing with jq syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
keywords = ["data", "jq", "query", "dataframe", "processing"]
categories = ["command-line-utilities", "data-structures"]

[lints]
workspace = true

[dependencies]
# Data processing
arrow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Parsing and evaluation
nom = { workspace = true }

# Async runtime (for streaming)
futures = { workspace = true }

# Utilities
regex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
either = { workspace = true }

# Memory management
bytes = { workspace = true }
smallvec = { workspace = true }

# Logging
log = { workspace = true }

# CLI (optional)

# Local crates
dsq-formats = { path = "../dsq-formats" }
dsq-io = { path = "../dsq-io" }
dsq-parser = { path = "../dsq-parser" }
dsq-shared = { path = "../dsq-shared" }
dsq-filter = { path = "../dsq-filter" }
rand = { workspace = true, features = ["std_rng"] }
polars-ops = { workspace = true, features = ["pivot"] }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "fs", "io-util"] }
polars = { workspace = true, features = ["lazy", "csv", "json", "parquet", "temporal", "strings", "is_in"], optional = true }
dsq-filter = { path = "../dsq-filter", features = ["rand"] }
dsq-formats = { path = "../dsq-formats", features = ["parquet", "avro"] }
once_cell = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
polars = { workspace = true, features = ["lazy", "csv", "json", "temporal", "strings", "is_in"], optional = true }

[features]
default = ["all-formats", "io"]
all-formats = ["csv", "json", "parquet", "avro"]
csv = []
json = []
parquet = []
avro = ["polars/avro"]
io = []
filter = ["polars"]
repl = []
rand = []
