[package]
name = "dsq-filter"
version = "0.1.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "Filter system for dsq that operates at the AST level"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
homepage = "https://datasetq.com"
documentation = "https://docs.rs/dsq-filter"
readme = "README.md"
keywords = ["jq", "data", "filter", "ast", "json"]
categories = ["data-structures", "parsing", "command-line-utilities"]

[lints]
workspace = true

[dependencies]
# Core dependencies
dsq-shared = { version = "0.1.0", path = "../dsq-shared" }
dsq-parser = { version = "0.1.0", path = "../dsq-parser" }
dsq-functions = { version = "0.1.0", path = "../dsq-functions", default-features = false }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
rand = { workspace = true, optional = true }
lru = { workspace = true }
polars = { workspace = true }

# Profiling
coz = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dsq-functions = { version = "0.1.0", path = "../dsq-functions", features = ["rand"] }
rand = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[features]
rand = ["dep:rand"]
profiling = ["coz"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
