[package]
name = "dsq-formats"
version = "0.2.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "File format support for dsq - handles reading and writing various data formats"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
keywords = ["data", "formats", "csv", "json", "parquet"]
categories = ["data-structures", "parsing"]

[lints]
workspace = true

[dependencies]
# Data processing
chrono = { workspace = true }


# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Shared types
dsq-shared = { version = "0.2.0", path = "../dsq-shared" }

# Utilities
regex = { workspace = true }
indexmap = { workspace = true }
paste = { workspace = true }

# Logging
log = { workspace = true }

# CLI
clap = { workspace = true, optional = true }

# Profiling
coz = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polars = { workspace = true, features = ["parquet"] }
arrow = { workspace = true }
apache-avro = { workspace = true, features = ["snappy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
polars = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
all-formats = ["csv", "json", "avro"]
csv = []
json = []
parquet = []
avro = []
cli = ["dep:clap"]
profiling = ["coz"]
