[package]
name = "dsq-functions"
version = "0.1.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "Built-in functions and registry for dsq"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
homepage = "https://datasetq.com"
documentation = "https://docs.rs/dsq-functions"
readme = "README.md"
keywords = ["jq", "data", "functions", "builtin"]
categories = ["data-structures", "command-line-utilities"]

[dependencies]
# Core dependencies
dsq-shared = { path = "../dsq-shared" }

# Big integer support
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
rand = { version = "0.9", optional = true }
base32 = "0.5"
base58 = "0.2"
base64 = "0.21"
url = "2.4"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "v7", "js"] }
chrono = { workspace = true }
md5 = "0.8"
sha1 = "0.10"
unidecode = "0.3"
num-format = "0.4"
heck = "0.5"
smartstring = "1.0"
inventory = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polars = { version = "0.52", features = ["lazy", "csv", "json", "parquet", "strings", "temporal", "dtype-datetime", "dtype-date", "dtype-time", "describe", "rows", "chunked_ids"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
polars = { version = "0.35", default-features = false, features = ["lazy", "csv", "json", "strings", "temporal", "dtype-datetime", "dtype-date", "dtype-time", "rows", "chunked_ids"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
rand = ["dep:rand"]

[dev-dependencies]
tempfile = "3.8"