[package]
name = "dsq-functions"
version = "0.1.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "Built-in functions and registry for dsq"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
homepage = "https://datasetq.com"
documentation = "https://docs.rs/dsq-functions"
readme = "README.md"
keywords = ["jq", "data", "functions", "builtin"]
categories = ["data-structures", "command-line-utilities"]

[lints]
workspace = true

[dependencies]
# Core dependencies
dsq-shared = { path = "../dsq-shared" }

# Big integer support
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
rand = { workspace = true, optional = true }
base32 = { workspace = true }
base58 = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7", "js"] }
chrono = { workspace = true }
md5 = { workspace = true }
sha1 = { workspace = true }
unidecode = { workspace = true }
num-format = { workspace = true }
heck = { workspace = true }
smartstring = { workspace = true }
inventory = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polars = { workspace = true, features = ["lazy", "csv", "json", "parquet", "strings", "temporal", "dtype-datetime", "dtype-date", "dtype-time", "describe", "rows", "chunked_ids"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
polars = { workspace = true, default-features = false, features = ["lazy", "csv", "json", "strings", "temporal", "dtype-datetime", "dtype-date", "dtype-time", "rows", "chunked_ids"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[features]
rand = ["dep:rand"]

[dev-dependencies]
tempfile = { workspace = true }
