[package]
name = "dsq-io-uri"
version = "0.1.0"
edition = "2021"
authors = ["Durable Programming LLC"]
description = "URI routing for dsq I/O plugins"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durableprogramming/dsq"
keywords = ["io", "uri", "routing"]
categories = ["filesystem"]

[lints]
workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true, features = ["fs", "io-util", "io-std"] }

[features]
default = []
